[project]
name = "simplesim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "aiohttp-cors==0.7.0",
    "aiosignal==1.3.1",
    "attrs==23.2.0",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "frozenlist==1.4.1",
    "gymnasium>=1.2.0",
    "idna==3.7",
    "mujoco>=3.3.4",
    "multidict==6.0.5",
    "numpy==1.26.4",
    "opencv-python==4.10.0.82",
    "packaging==24.1",
    "pillow==10.3.0",
    "pyapriltags==3.4.3.1",
    "pygame==2.6.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "websockets==12.0",
    "yarl==1.9.4",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
