[project]
name = "simplesim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.7.0",
    "aiosignal>=1.3.0",
    "attrs>=23.2.0",
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    "frozenlist>=1.4.0",
    "gymnasium>=1.2.0",
    "idna>=3.7",
    "mujoco>=3.3.4",
    "multidict>=6.0.0",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "packaging>=24.0",
    "pillow>=10.3.0",
    "pyapriltags>=3.4.0",
    "pygame>=2.6.0",
    "torch",
    "torchvision",
    "torchaudio",
    "websockets>=12.0",
    "yarl>=1.0,<2.0",
]



[tool.uv.sources]
torch = [{ index = "pytorch-nightly-cu128" } ]
torchvision = [ { index = "pytorch-nightly-cu128" } ]
torchaudio = [ { index = "pytorch-nightly-cu128" } ]
pytorch-triton = [ { index = "pytorch-nightly-cu128" } ]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
